clusters/hive/apps/audiobookshelf/k8s-manifests/audiobookshelf-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
  labels:
    kasten.io/backup: "true"
spec: {}
